--- a/scripts/README.md.html
+++ b/scripts/README.md.html
@@ -9,57 +9,85 @@
 </head>
 
 <body class="stackedit">
-  <div class="stackedit__html"><h1 id="moebuntu-setuphelperscript">Moebuntu-SetupHelperScript</h1>
-<p>Moebuntu Setup Helper Script for Repository:Moebuntu-kawaiiUbuntu-ToysOriginal</p>
-<h2 id="overview-of-this-setup-helper">1.Overview of this setup helper</h2>
-<p>This setup helper is for the ”<a href="https://github.com/mifjpn/Moebuntu-kawaiiUbuntu-ToysOriginal">mifjpn/Moebuntu-kawaiiUbuntu-ToysOriginal</a>’’ repository.<br>
-The repository has a collection of nine moe (or kawaii) color themes.<br>
-In addition, it also includes a Moe (or Kawaii) theme for Plymouth (ie the screen when the OS loads).<br>
-This setup helper is intended to make setting them up easier.</p>
-<h2 id="how-to-use">2.How to use</h2>
-<h3 id="operating-system-environment-download-and-preparation.">1)Operating system environment, download and preparation.</h3>
-<p>Please prepare “UBUNTU22.04Lts”.<br>
-This script should work on this OS.<br>
-First, download the release “scripts.tar.xz” with firefox.<br>
-Then unpack this file with “Archive Manager” etc.<br>
-Once the “scripts” folder is unpacked, you’ll find the helper scripts in there.</p>
-<h3 id="explanation-of-the-simplest-usage">2)Explanation of the simplest usage</h3>
-<p>In the “Nautilus” file manager, open the “script” folder.<br>
-Among many shell scripts, the script to run is “Moeset”.<br>
-The easiest way is to right click on this “Moeset” and run it with “Run as a Program”.<br>
-When the script runs, “Moebuntu Setting Helper” will appear.</p>
-<h3 id="how-to-use-moebuntu-setting-helper">3)How to use “Moebuntu Setting Helper”</h3>
-<p>You can see the selection screen of many setup items.<br>
-Here, the first setup item you must do is “1) set gnome-shell-extension-manager (Do first!)”.<br>
-The “gnome-shell-extension-manager” window will open. What to do here is given as instructions to this helper. They are:</p>
-<ol>
-<li>Search for “User Themes” in the “Browse” tab</li>
-<li>Click the “Add” button to install</li>
-<li>Go to the Added tab and activate the Extension by setting the button on the header to “ON” (to the right)</li>
-<li>turn on the button to the right of “User Themes”<br>
-(Then please push Window-close button and close this window)</li>
-</ol>
-<p>That’s all there is to do here.<br>
-(Because: The reason for manipulating the GUI in this way is so that Gnome-Shell-Extention will gracefully react to changes in GNOME versions.)</p>
-<p>Numbers 2) to 10) of choice are setups of 9 color “themes” that are each “Window Theme and Shell Theme Set”.<br>
-In those settings, you can change the login screen.<br>
-If you want to change, type “Y” to the “Change login screen” question.<br>
-If you want to change to the original or example login screen, type “Y” to the “Set Original(Example) login png-file” question.<br>
-A question for inputting images in PNG format for changes will appear.<br>
-If you have a png image file you want to change, drag and drop it from nautilus file mamager. If you press return without entering anything, the example-image will be specified.<br>
-If you choose “11)remove Moebuntu theme(Reset to Yaru)”, the 9-color theme file of Moebuntu will be deleted, and the default setting of “Yaru” will be restored.</p>
-<p>The choices for “12) and 13)” are items to set or remove Moe-Pink-Icon (kawaii icons).</p>
-<p>“14) set Moe-spinner plymouth” is a setting item of Moe (Kawaii) plymouth (OS loading waiting screen).<br>
-If you want to set an original PNG image or an example image, type “Y” in “Set Original(or Example) plymouth png-file”. If you want to use the original PNG image file as a plymouth image, drag and drop the PNG image file from the nautilus file manager.<br>
-If you press the return key without entering anything, the example PNG image will be specified.<br>
-(Note that the PNG image will be displayed in tiles. If you want a single image, you must match the resolution of your display.)<br>
-“15) remove Moe-spinner plymouth” sets back to the default Plymouth where the default “UBUNTU spinner” is displayed.</p>
-<p>The "16) ‘’ choices are used to switch the example background of the screen to a Moe image(Kawaii image)  pasting the "Moebuntu logo’’ .If you choose “17)”, the background will return to the default background screen of “UBUNTU”.</p>
-<p>Choices 18) and 19) are used for Firefox to be the Deb version or the Snap version. The Deb version of Firefox can run with a Moe (Kawaii) theme.</p>
-<h2 id="about-forking-and-improving-this-moebuntu-setup-helper">3.About forking and improving this “Moebuntu Setup Helper”</h2>
-<p>This script is basically MIT licensed. So I think it would be nice to fork, for example, to create a local language version.<br>
-But the themes, Plymouth, and Icons are made by Toy.<br>
-Therefore, please create a script that downloads them from GitHub. (Do not include works such as Toy’s theme in scripts.)</p>
+  <div class="stackedit__html"><h1 id="moebuntu-kantan-setup2">Moebuntu-kantan-Setup2</h1>
+<p>Moebuntuのかんたんセットアップアプリ２です。</p>
+<h2 id="このセットアップヘルパーの概要">1.このセットアップヘルパーの概要</h2>
+<p>このセットアップ ヘルパーは、”<a href="https://github.com/mifjpn/Moebuntu-kawaiiUbuntu-ToysOriginal">mifjpn/Moebuntu-kawaiiUbuntu-ToysOriginal</a>’'リポジトリ用です。<br>
+リポジトリには、9 つの萌え (またはかわいい) カラー テーマのコレクションがあります。<br>
+さらに、プリマスの萌え (またはカワイイ) テーマ (つまり、OS ロード時の画面) も含まれています。<br>
+また、萌え (またはカワイイ) サウンド数種類も含まれます。<br>
+このかんたんセットアップ アプリ２は、セットアップを簡単にすることを目的としています。</p>
+<h2 id="使い方">2.使い方</h2>
+<h3 id="os環境、ダウンロード、準備。">1)OS環境、ダウンロード、準備。</h3>
+<p>「UBUNTU22.04Lts」をご用意ください。<br>
+このスクリプトは、この OS で動作するはずです。<br>
+まず、Firefox でリリース “scripts.tar.xz” をダウンロードします。<br>
+次に、このファイルは、ダウンロードフォルダにダウンロードされます。そのフォルダを開いてダブルクリックすれば「アーカイブ　マネージャーが開き」などで展開を促しますので、展開しましょう。<br>
+展開すると、「scripts」 フォルダができています。ヘルパー アプリが含まれています。</p>
+<h3 id="最も簡単な使い方の説明">2)最も簡単な使い方の説明</h3>
+<p>「Nautilus」ファイル マネージャで、「script」フォルダを開きます。<br>
+数あるシェルスクリプトの中で、実行するアプリが「Moeset」です。<br>
+最も簡単な方法は、この「Moeset」を右クリックし、「プログラムとして実行」を選んで、実行することです。<br>
+スクリプトを実行すると「Moebuntu セッティング　ヘルパー２」が表示されます。</p>
+<h3 id="「moebuntu-セッティング-ヘルパー２」の使い方">3)「Moebuntu セッティング　ヘルパー２」の使い方</h3>
+<p>多くの設定項目の選択画面が表示されます。<br>
+ここで、最初に行う設定項目は「1) 基礎の設定(最初にやること)」です。<br>
+１を押して、エンターキーを押してください。<br>
+基礎の設定をするために、「gnome-shell-extension-manager」のウィンドウが開きます。<br>
+ここで何をあなたにしてほしいかを、このヘルパーが項目をあげて表示します。</p>
+<p>1.上の「探す」タブを押して、"User Themes"を探してください。<br>
+2.そこの「追加」ボタンを押して、インストールしてください。<br>
+3.上の「追加済み」タブを押して、その右のスイッチを「オン」にしてください。（右にスライドでオンです）<br>
+　もし、上にスイッチばない場合は、 "use extention"のスイッチを「オン」にしてください。<br>
+4."User Themes"の右にあるスイッチを「オン」にしてください。<br>
+(その後、ウィンドウを閉じるボタンを押して、このウィンドウを閉じてください)</p>
+<p>ここで行うことはそれだけです。<br>
+(豆知識の理由: この方法で GUI を操作する理由は、Gnome-Shell-Extention が GNOME バージョンの変更に適切に反応するようにするためです。)</p>
+<p>「2) から 10)」 のメニューはそれぞれ「ウィンドウとランチャの色のテーマ」である9色の「テーマの設定です。<br>
+これらの設定では、ウインドウとランチャのほかに、ログイン背景画面を変更できます。<br>
+変更する場合は、「ログイン画面を変更しますか？」の質問に「Y」と入力してください。<br>
+次に、Moebuntuの基本ログイン画面に変更したい場合は、<br>
+　　「Moebuntuの基本ログイン画面を使用する場合は「Y」を押してください。もしくは、自分のオリジナル画像（PNG形式）や例の画像を使用する場合は「N」を押してください。」に<br>
+　「Y」を入力してください。この場合、Moebuntuの基本ログイン画面を設定して終わり、メニューに戻ります。<br>
+ここで「N」を選択すると、自分のオリジナル画像（PNG形式）や例の画像を使用できます。<br>
+ログイン画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
+「自分のオリジナルのログインイメージ（PNG形式）を使用する場合は、ファイラからそのイメージファイルをドラックアンドドロップしてください。何もせずにリターンボタンを押すと例のイメージが使用されます。」という質問がでますので、<br>
+変更したいPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと背景例の四国めたんのイメージが読み込まれて設定されます。</p>
+<p>「11) 萌えテーマを消す」を選択すると、Moebuntuの9色テーマファイルが削除され、UBUNTU既定の「Yaru」のテーマの初期設定に戻ります。<br>
+　そして、同時にシステム内に設定してあったMoebuntuの9色のテーマも削除されます。</p>
+<p>「12)」と「13)」の選択肢は、萌えアイコンを設定または削除する選択肢です。<br>
+　消した場合は、UBUNTU既定のアイコンに戻り、さらに萌えアイコンのフォルダはシステムから削除されます。</p>
+<p>「14)萌え起動画面」は、OS読み込み待ち画面の設定に使います。<br>
+Moebuntuの基本画面背景を使用したい場合は、<br>
+　　「Moebuntuの基本スクリーンイメージを使う場合「Y」を押してください。<br>
+　もしくは、自分のオリジナルのpng形式のイメージを入れる場合、また、例のイメージを入れる場合は「N」を押してください。」に<br>
+「Y」を入力してください。この場合、Toyさんの基本待ち画面の背景を設定して終わり、メニューに戻ります。<br>
+ここで「N」を選択すると、自分のオリジナル画像（PNG形式）や例の画像を使用できます。<br>
+OSの起動待ち画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
+「自分のオリジナル（Png形式の）イメージを起動画面にしたい場合は、ファイラからドラックアンドドロップしてください。そのまま何も入れすにエンターキーを押すと例のイメージが設定されます。」<br>
+という質問がでますので、<br>
+変更したいPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと背景例の四国めたんのイメージが読み込まれて設定されます。<br>
+(PNG 画像はタイル状に並べられて表示されることに注意してください。ディスプレイにぴったり1枚の画僧にするには、解像度と一致した、背景画像が必要です。)<br>
+「15) 萌え起動画面を消す」は、UBUNTU既定の黒画面にくるくるのついている、OS起動待ち画面に戻ります。さらに、萌え起動画面の設定を解除し、萌え起動画面のフォルダもシステムから消されます。</p>
+<p>「16) 萌え壁紙」の選択肢は、デスクトップの壁紙を「Moebuntuロゴ」を貼り付けた萌え画像(カワイイ画像)に切り替える場合に使用します。<br>
+　デスクトップの待ち画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
+　「設定するイメージファイル（JPG形式）をファイラからドラックアンドドロップしてください。そのまま何も入れずにリターンボタンを押した場合は例のイメージが使用されます。：」<br>
+変更したいJPG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと背景例の四国めたんのイメージが読み込まれて設定されます。</p>
+<p>「17) 萌え壁紙を消す」を選択すると、UBUNTU規定のデスクトップの壁紙に戻ります。</p>
+<p>選択肢 18) と 19) は、Firefox を　萌え版にするか、（UBUNTU既定の）萌えない版にするために使用します。</p>
+<p>選択肢 20)~23) はサウンドを設定するために使用されます (各バージョンがあります。)<br>
+基本の萌え音は。アメーション素人声優さん作です。<br>
+メイド風萌え音は基本のメイド版です。<br>
+SF風萌え音は、基本の萌え音SFバージョンです。<br>
+初音ミク萌え音は、初音ミクの声で作られています。<br>
+選択肢 24) は、萌え音をすべて削除するために使用されます。</p>
+<h2 id="既知のエラーについて">3.既知のエラーについて</h2>
+<p>Virtual-Box上のUBUNTUの一部で、user-themeが作られない問題が上がっています。しかし、一部の場合であって再現ができませんでした。もし起こった場合は、"Gnome Tweaks"でテーマを設定するか、再起動するといいようです。</p>
+<h2 id="この「moebuntu-setup-helper」のフォークと改良について">4.この「Moebuntu Setup Helper」のフォークと改良について</h2>
+<p>このスクリプトは基本的に MIT ライセンスです。 なのでフォークして、例えば現地語版を作るといいと思います。<br>
+ただし、テーマ、起動画面（プリマス）、およびアイコンはToyさんによって作成されています.<br>
+そのため、GitHub からダウンロードするスクリプトを作成してください。 （Toyさんのテーマなどの作品はスクリプトに含めないでください。）<br>
+よろしくお願いします。</p>
 </div>
 </body>
 
