--- a/scripts/README.md.html
+++ b/scripts/README.md.html
@@ -47,12 +47,12 @@
 これらの設定では、ウインドウとランチャのほかに、ログイン背景画面を変更できます。<br>
 変更する場合は、「ログイン画面を変更しますか？」の質問に「Y」と入力してください。<br>
 次に、Moebuntuの基本ログイン画面に変更したい場合は、<br>
-　　「Moebuntuの基本ログイン画面を使用する場合は「Y」を押してください。もしくは、自分のオリジナル画像（PNG形式）や例の画像を使用する場合は「N」を押してください。」に<br>
+　　「Moebuntuの基本ログイン画面を使用する場合は「Y」を押してください。もしくは、自分のオリジナル画像（PNG形式）やこちらで用意した同じような見本の画像を使用する場合は「N」を押してください。」に<br>
 　「Y」を入力してください。この場合、Moebuntuの基本ログイン画面を設定して終わり、メニューに戻ります。<br>
-ここで「N」を選択すると、自分のオリジナル画像（PNG形式）や例の画像を使用できます。<br>
+ここで「N」を選択すると、自分のオリジナル画像（PNG形式）やこちらで用意した同じような見本の画像を使用できます。<br>
 ログイン画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
-「自分のオリジナルのログインイメージ（PNG形式）を使用する場合は、ファイラからそのイメージファイルをドラックアンドドロップしてください。何もせずにリターンボタンを押すと例のイメージが使用されます。」という質問がでますので、<br>
-変更したいPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと背景例の四国めたんのイメージが読み込まれて設定されます。</p>
+「自分のオリジナルのログインイメージ（PNG形式）を使用する場合は、ファイラからそのイメージファイルをドラックアンドドロップしてください。何もせずにリターンボタンを押すとこちらで用意した同じような見本のイメージが使用されます。」という質問がでますので、<br>
+変更したいPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと四国めたんのイメージが読み込まれて設定されます。</p>
 <p>「11) 萌えテーマを消す」を選択すると、Moebuntuの9色テーマファイルが削除され、UBUNTU既定の「Yaru」のテーマの初期設定に戻ります。<br>
 　そして、同時にシステム内に設定してあったMoebuntuの9色のテーマも削除されます。</p>
 <p>「12)」と「13)」の選択肢は、萌えアイコンを設定または削除する選択肢です。<br>
@@ -60,19 +60,19 @@
 <p>「14)萌え起動画面」は、OS読み込み待ち画面の設定に使います。<br>
 Moebuntuの基本画面背景を使用したい場合は、<br>
 　　「Moebuntuの基本スクリーンイメージを使う場合「Y」を押してください。<br>
-　もしくは、自分のオリジナルのpng形式のイメージを入れる場合、また、例のイメージを入れる場合は「N」を押してください。」に<br>
+　もしくは、自分のオリジナルのpng形式のイメージを入れる場合、また、こちらで用意した同じような見本のイメージを入れる場合は「N」を押してください。」に<br>
 「Y」を入力してください。この場合、Toyさんの基本待ち画面の背景を設定して終わり、メニューに戻ります。<br>
-ここで「N」を選択すると、自分のオリジナル画像（PNG形式）や例の画像を使用できます。<br>
+ここで「N」を選択すると、自分のオリジナル画像（PNG形式）やこちらで用意した同じような見本の画像を使用できます。<br>
 OSの起動待ち画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
-「自分のオリジナル（Png形式の）イメージを起動画面にしたい場合は、ファイラからドラックアンドドロップしてください。そのまま何も入れすにエンターキーを押すと例のイメージが設定されます。」<br>
+「自分のオリジナル（Png形式の）イメージを起動画面にしたい場合は、ファイラからドラックアンドドロップしてください。そのまま何も入れすにエンターキーを押すとこちらで用意した同じような見本のイメージが設定されます。」<br>
 という質問がでますので、<br>
-変更したいPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと背景例の四国めたんのイメージが読み込まれて設定されます。<br>
+変更したいPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと四国めたんのイメージが読み込まれて設定されます。<br>
 (PNG 画像はタイル状に並べられて表示されることに注意してください。ディスプレイにぴったり1枚の画僧にするには、解像度と一致した、背景画像が必要です。)<br>
 「15) 萌え起動画面を消す」は、UBUNTU既定の黒画面にくるくるのついている、OS起動待ち画面に戻ります。さらに、萌え起動画面の設定を解除し、萌え起動画面のフォルダもシステムから消されます。</p>
 <p>「16) 萌え壁紙」の選択肢は、デスクトップの壁紙を「Moebuntuロゴ」を貼り付けた萌え画像(カワイイ画像)に切り替える場合に使用します。<br>
 　デスクトップの待ち画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
-　「設定するイメージファイル（JPG形式）をファイラからドラックアンドドロップしてください。そのまま何も入れずにリターンボタンを押した場合は例のイメージが使用されます。：」<br>
-変更したいJPG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと背景例の四国めたんのイメージが読み込まれて設定されます。</p>
+　「設定するイメージファイル（JPG形式）をファイラからドラックアンドドロップしてください。そのまま何も入れずにリターンボタンを押した場合はこちらで用意した同じような見本のイメージが使用されます。：」<br>
+変更したいJPG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すと四国めたんのイメージが読み込まれて設定されます。</p>
 <p>「17) 萌え壁紙を消す」を選択すると、UBUNTU規定のデスクトップの壁紙に戻ります。</p>
 <p>選択肢 18) と 19) は、Firefox を　萌え版にするか、（UBUNTU既定の）萌えない版にするために使用します。</p>
 <p>選択肢 20)~23) はサウンドを設定するために使用されます (各バージョンがあります。)<br>
