improve image format and manual

--- a/scripts/README.md.html
+++ b/scripts/README.md.html
@@ -68,8 +68,8 @@
 　「Y」を入力してください。この場合、Moebuntuの基本ログイン画面を設定して終わり、メニューに戻ります。<br>
 ここで「N」を選択すると、自分のオリジナル画像（PNG形式）やサンプル画像を使用できます。<br>
 ログイン画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
-「自分のオリジナルのログインイメージ（PNG形式）を使用する場合は、ファイラからそのイメージファイルをドラックアンドドロップしてください。何もせずにリターンボタンを押すとサンプルイメージが使用されます。」という質問がでますので、<br>
-変更したいPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すとサンプル四国めたんのイメージが読み込まれて設定されます。</p>
+「自分のオリジナルのログインイメージ（PNG形式など）を使用する場合は、ファイラからそのイメージファイルをドラックアンドドロップしてください。何もせずにリターンボタンを押すとサンプルイメージが使用されます。:」という質問がでますので、<br>
+変更したいPNG形式などの画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すとサンプル四国めたんのイメージが読み込まれて設定されます。</p>
 <p>「11) 萌えテーマを消す」を選択すると、Moebuntuの9色テーマファイルが削除され、UBUNTU既定の「Yaru」のテーマの初期設定に戻ります。<br>
 　そして、同時にシステム内に設定してあったMoebuntuの9色のテーマも削除されます。</p>
 <p>「12)」と「13)」の選択肢は、萌えアイコンを設定または削除する選択肢です。<br>
@@ -77,23 +77,23 @@
 <p>「14)萌え起動画面」は、OS読み込み待ち画面の設定に使います。<br>
 Moebuntuの基本画面を使用したい場合は、<br>
 　　「Moebuntuの基本スクリーンイメージを使う場合「Y」を押してください。<br>
-　もしくは、自分のオリジナルのpng形式のイメージを入れる場合、また、サンプルイメージを入れる場合は「N」を押してください。」に<br>
-「Y」を入力してください。この場合、Toyさんの基本待ち画面のを設定して終わり、メニューに戻ります。<br>
+　もしくは、自分のオリジナルのpngなどの形式のイメージを入れる場合、また、サンプルイメージを入れる場合は「N」を押してください。」に<br>
+「Y」を入力してください。この場合、Moebuntuの基本待ち画面のを設定して終わり、メニューに戻ります。<br>
 ここで「N」を選択すると、自分のオリジナル画像（PNG形式）やサンプル画像を使用できます。<br>
 OSの起動待ち画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
-「自分のオリジナル（Png形式の）イメージを起動画面にしたい場合は、ファイラからドラックアンドドロップしてください。そのまま何も入れすにエンターキーを押すとサンプルイメージが設定されます。」<br>
+「自分のオリジナル（png形式などの）イメージを起動画面にしたい場合は、ファイラからドラックアンドドロップしてください。そのまま何も入れすにエンターキーを押すとサンプルイメージが設定されます。:」<br>
 という質問がでますので、<br>
 変更したいPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すとサンプル四国めたんのイメージが読み込まれて設定されます。<br>
-(PNG 画像はタイル状に並べられて表示されることに注意してください。ディスプレイにぴったり1枚の画僧にするには、解像度と一致した、画像が必要です。)<br>
+(画像はタイル状に並べられて表示されることに注意してください。ディスプレイにぴったり1枚の画僧にするには、解像度と一致した、画像が必要です。)<br>
 「15) 萌え起動画面を消す」は、UBUNTU既定の黒画面にくるくるのついている、OS起動待ち画面に戻ります。さらに、萌え起動画面の設定を解除し、萌え起動画面のフォルダもシステムから消されます。</p>
-<p>「16) 萌え壁紙」の選択肢は、デスクトップの壁紙を「Moebuntuロゴ」を貼り付けた萌え画像(カワイイ画像)に切り替える場合に使用します。<br>
-　デスクトップの待ち画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
-　「設定するイメージファイル（JPGまたはPNG形式）をファイラからドラックアンドドロップしてください。そのまま何も入れずにリターンボタンを押した場合はサンプルイメージが使用されます。：」<br>
+<p>「16) 萌え壁紙」の選択肢は、デスクトップの壁紙を「Moebuntuロゴ」を貼り付けたサンプルの萌え画像(カワイイ画像)に切り替える場合に使用します。<br>
+　デスクトップの待ち画面に入れたいオリジナルのPNG形式などのの画像を入力するための質問が出てきます。<br>
+　「設定するイメージファイル（JPGやPNG形式など）をファイラからドラックアンドドロップしてください。そのまま何も入れずにリターンボタンを押した場合はサンプルイメージが使用されます。:」<br>
 変更したいJPGまたはPNG形式の画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すとサンプル四国めたんのイメージが読み込まれて設定されます。</p>
 <p>「17) 萌え壁紙を消す」を選択すると、UBUNTU規定のデスクトップの壁紙に戻ります。</p>
 <p>選択肢 18) と 19) は、Firefox を　萌え版にするか、（UBUNTU既定の）萌えない版にするために使用します。</p>
 <p>選択肢 20)~23) はサウンドを設定するために使用されます (各バージョンがあります。)<br>
-基本の萌え音は。アメーション素人声優さん作です。<br>
+基本の萌え音は。アニメーション素人声優さん作です。<br>
 メイド風萌え音は基本のメイド版です。<br>
 SF風萌え音は、基本の萌え音SFバージョンです。<br>
 初音ミク萌え音は、初音ミクの声で作られています。<br>
