--- a/scripts/README.md.html
+++ b/scripts/README.md.html
@@ -63,11 +63,10 @@
 <p>「2) から 10)」 のメニューはそれぞれ「ウィンドウとランチャの色のテーマ」である9色の「テーマの設定です。<br>
 これらの設定では、ウインドウとランチャのほかに、ログイン画面を変更できます。<br>
 変更する場合は、「ログイン画面を変更しますか？」の質問に「Y」と入力してください。<br>
-次に、Moebuntuの基本ログイン画面に変更したい場合は、<br>
-　　「Moebuntuの基本ログイン画面を使用する場合は「Y」を押してください。もしくは、自分のオリジナル画像（PNG形式）やサンプル画像を使用する場合は「N」を押してください。」に<br>
-　「Y」を入力してください。この場合、Moebuntuの基本ログイン画面を設定して終わり、メニューに戻ります。<br>
-ここで「N」を選択すると、自分のオリジナル画像（PNG形式）やサンプル画像を使用できます。<br>
-ログイン画面に入れたいオリジナルのPNG形式の画像を入力するための質問が出てきます。<br>
+次に、Moebuntuの基本ログイン画面に変更したい場合、「Moebuntuの基本ログイン画面を使用する場合は「Y」を押してください。もしくは、自分のオリジナル画像やサンプルイメージを使用する場合は「N」を押してください。:<br>
+」に「Y」を入力してください。この場合、Moebuntuの基本ログイン画面を設定して終わり、メニューに戻ります。<br>
+ここで「N」を選択すると、自分のオリジナル画像やサンプル画像を使用できます。<br>
+ログイン画面に入れたいオリジナルのPNG形式などの形式の画像を入力するための質問が出てきます。<br>
 「自分のオリジナルのログインイメージ（PNG形式など）を使用する場合は、ファイラからそのイメージファイルをドラックアンドドロップしてください。何もせずにリターンボタンを押すとサンプルイメージが使用されます。:」という質問がでますので、<br>
 変更したいPNG形式などの画像ファイルがある場合は、nautilusファイルマネージャーからドラッグ アンド ドロップします。 何も入力せずにリターンを押すと、「四国めたんちゃん（東日本大震災からの復興キャラクター）の萌えイメージを使いますか?(Y/N)?」と聞かれますので「Y」を押すとサンプル四国めたんのイメージが読み込まれて設定されます。</p>
 <p>「11) 萌えテーマを消す」を選択すると、Moebuntuの9色テーマファイルが削除され、UBUNTU既定の「Yaru」のテーマの初期設定に戻ります。<br>
